:arrow_up: Updating dependencies