@@ -10,18 +10,18 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.version>3.8.1</maven.compiler.version>
-        <maven.compiler.release>13</maven.compiler.release>
-        <maven.compiler.source>13</maven.compiler.source>
-        <maven.compiler.target>13</maven.compiler.target>
-        <maven.target.release>13</maven.target.release>
-        <maven.surefire.version>3.0.0-M4</maven.surefire.version>
-        <selenium.java.version>4.0.0-alpha-4</selenium.java.version>
-        <webdrivermanager.version>3.8.1</webdrivermanager.version>
-        <testng.version>7.1.0</testng.version>
-        <lombok.version>1.18.12</lombok.version>
-        <extentreports.version>4.1.3</extentreports.version>
-        <extentreports.testng.adapter.version>1.0.5</extentreports.testng.adapter.version>
+        <maven.compiler.version>3.12.1</maven.compiler.version>
+        <maven.compiler.release>17</maven.compiler.release>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.target.release>17</maven.target.release>
+        <maven.surefire.version>3.2.5</maven.surefire.version>
+        <selenium.java.version>4.17.0</selenium.java.version>
+        <webdrivermanager.version>5.6.3</webdrivermanager.version>
+        <testng.version>7.9.0</testng.version>
+        <lombok.version>1.18.30</lombok.version>
+        <extentreports.version>5.1.1</extentreports.version>
+        <extentreports.testng.adapter.version>1.2.2</extentreports.testng.adapter.version>
     </properties>
 
     <dependencies>
@@ -79,7 +79,6 @@
                         <release>${maven.compiler.release}</release>
                         <source>${maven.compiler.source}</source>
                         <target>${maven.target.release}</target>
-                        <compilerArgs>--enable-preview</compilerArgs>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -87,7 +86,6 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven.surefire.version}</version>
                     <configuration>
-                        <argLine>--enable-preview</argLine>
                         <suiteXmlFiles>
                             <!--suppress UnresolvedMavenProperty -->
                             <suiteXmlFile>src/test/resources/suites/${suite}.xml</suiteXmlFile>
@@ -101,8 +99,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>13</source>
-                    <target>13</target>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.target.release}</target>
                 </configuration>
             </plugin>
         </plugins>
